--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
             </div>
             <h1><i class="fab fa-github-alt"></i> GitHub Repo Gallery</h1>
             <section class="intro">
-                <div class="overview"></div>
+                <div class="overview">
+                </div>
             </section>
 
             <section class="repos">
